--- a/index.html
+++ b/index.html
@@ -36,10 +36,7 @@
         <title>WEBSTUDIO</title>
         <body>
             <header>
-                <h1><img src=""
-                alt="WEBSTUDIO"
-                width="115"
-                height="24"></h1>
+                <a href="./index.html">WebStudio</a>
                 <nav>
                     <ul>
                         <li>Studio</li>
@@ -109,10 +106,7 @@
                 </section>
             </main>
             <footer>
-                <img src=""
-                alt="WEBSITE"
-                width="115"
-                height="24">
+                <a href="./index.html">WebStudio</a>
             </footer>
         </body>
     </head>
