--- a/index.html
+++ b/index.html
@@ -31,13 +31,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="description"
-        content="WEBSTUDIO">
-        <title>WEBSTUDIO</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
         <body>
             <header>
-                <a href="./index.html">WebStudio</a>
-                <nav>
+                 <nav>
+                    <a href="./index.html">WebStudio</a>
                     <ul>
                         <li>Studio</li>
                         <li>Portfolio</li>
@@ -80,26 +79,30 @@
                     <ul>
                         <li><img src="Mark.jpg"
                         alt="Mark Guerrero"
-                        width="264:
-                        height="260"><h3>Mark Guerrero</h3>
+                        width="264"
+                        height="260">
+                        <h3>Mark Guerrero</h3>
                          </li>
                          <p>Product Designer</p>
                          <li><img src="Tom.jpg"
                             alt="Tom Ford"
-                            width="264:
-                            height="260"><h3>Tom Ford</h3>
+                            width="264"
+                            height="260">
+                            <h3>Tom Ford</h3>
                         </li>
                         <p>Frontend Developer</p>
                         <li><img src="Camila.jpg"
                             alt="Camila Garcia"
-                            width="264:
-                            height="260"><h3>Camila Garcia</h3>
+                            width="264"
+                            height="260">
+                            <h3>Camila Garcia</h3>
                         </li>
                         <p>Marketing</p>
                         <li><img src="Daniel.jpg"
                             alt="Daniel Wilson"
-                            width="264:
-                            height="260"><h3>Daniel Wilson</h3>
+                            width="264"
+                            height="260">
+                            <h3>Daniel Wilson</h3>
                         </li>
                         <p>UI Designer</p>
                     </ul>
