--- a/index.html
+++ b/index.html
@@ -4,84 +4,87 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+    </head>
         <body>
             <header>
                  <nav>
                     <a href="./index.html">WebStudio</a>
                     <ul>
-                        <li>Studio</li>
-                        <li>Portfolio</li>
-                        <li>Contacts</li>
+                        <li><a href="">Studio</a></li>
+                        <li><a href="">Portfolio</a></li>
+                        <li><a href="">Contacts</a></li>
                     </ul>
+                </nav>
                     <address>
+                        <ul>
                         <a href="info@devstudio.com">info@devstudio.com</a>
                         <a href="+11(000)111-11-11">+11 (000) 111-11-11</a>
+                        </ul>
                     </address>
-                </nav>
             </header>
             <main>
                 <section>
-                    <h2>Effective Solution<br/>
-                    for Your Business</h2>
+                    <h1> Effective Solution
+                    for Your Business</h1>
                     <button type="button">Order service</button>
                 </section>
                 <section>
                     <ul>
                         <li>
                             <h3>Strategy</h3>
-                        </li>
                         <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                        </li>
                         <li>
                             <h3>Punctuality</h3>
-                        </li>
                         <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                        </li>
                         <li>
                             <h3>Diligence</h3>
-                        </li>
                         <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                        </li>
                         <li>
                             <h3>Technologies</h3>
-                        </li>
                         <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                        </li>
                     </ul>
                 </section>
                 <section>
                     <h2>Our Team</h2>
                     <ul>
-                        <li><img src="Mark.jpg"
+                        <li><img src="./images/Mark.jpg"
                         alt="Mark Guerrero"
                         width="264"
                         height="260">
                         <h3>Mark Guerrero</h3>
+                        <p>Product Designer</p>
                          </li>
-                         <p>Product Designer</p>
-                         <li><img src="Tom.jpg"
+                         <li><img src="./images/Tom.jpg"
                             alt="Tom Ford"
                             width="264"
                             height="260">
                             <h3>Tom Ford</h3>
+                            <p>Frontend Developer</p>
                         </li>
-                        <p>Frontend Developer</p>
-                        <li><img src="Camila.jpg"
+                        <li><img src="./images/Camila.jpg"
                             alt="Camila Garcia"
                             width="264"
                             height="260">
                             <h3>Camila Garcia</h3>
+                            <p>Marketing</p>
                         </li>
-                        <p>Marketing</p>
-                        <li><img src="Daniel.jpg"
+                        <li><img src="./images/Daniel.jpg"
                             alt="Daniel Wilson"
                             width="264"
                             height="260">
                             <h3>Daniel Wilson</h3>
+                            <p>UI Designer</p>
                         </li>
-                        <p>UI Designer</p>
                     </ul>
                 </section>
             </main>
             <footer>
                 <a href="./index.html">WebStudio</a>
+                <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </footer>
         </body>
-    </head>
 </html>
