--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 </nav>
                     <address>
                         <ul>
-                        <a href="info@devstudio.com">info@devstudio.com</a>
-                        <a href="+11(000)111-11-11">+11 (000) 111-11-11</a>
+                        <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+                        <li><a href="+11(000)111-11-11">+11 (000) 111-11-11</a></li>
                         </ul>
                     </address>
             </header>
