--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
             </header>
             <main>
                 <section>
-                    <h1> Effective Solution
-                    for Your Business</h1>
-                    <button type="button">Order service</button>
+                    <h1>Effective Solutions for Your Business</h1>
+                    <button type="button">Order Service</button>
                 </section>
                 <section>
                     <ul>
